first commit after migration